add lesson 02.04